--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 @import 'reset.css';
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Croissant+One&family=Noto+Serif:ital@1&family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Croissant+One&family=Noto+Serif:ital@1&family=Roboto&family=Roboto+Slab&display=swap');
 
 body{
     position: relative;
-    width: 375px;
-    height: 667px;
+    width: 390px;
+    height: 844px;
     border : 1px solid red;
+    font-family: 'Croissant One', cursive;
 }
 
 nav{
@@ -23,7 +25,6 @@ nav{
     width: 100%;
     height: 50%;
     background :none;
-    border: 1px solid black;
 }
 
 #nav-bottom{
@@ -48,7 +49,6 @@ nav{
 #nav-top ul li a{
     color:white;
     font-weight: bolder;
-    font-family: 'Croissant One', cursive;
     font-size: 20px;
 }
 
@@ -56,6 +56,23 @@ nav{
     position: absolute;
     right: 5px;
 }
+
+#nav-bottom ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#nav-bottom ul li a{
+    color:white;
+    font-weight: bolder;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+}
+
+
 
 img{
     width: 100%;
