--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ nav{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
