--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ nav{
     align-items: center;
     position: fixed;
     top: 0;
+    z-index: 5;
 }
 
 #nav-top{
@@ -28,7 +29,8 @@ nav{
 
 #nav-bottom{
     width: 100%;
-    height: 50%;
+    height: 50%; 
+    position: relative;
 }
 
 #nav-top ul{
@@ -36,6 +38,7 @@ nav{
     height: 100%;
     list-style: none;
     display: flex;
+    justify-content: space-around;
     align-items: center;
     position: relative;
 }
@@ -62,19 +65,129 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: absolute;
+    left: -13px;
 }
+
+
+
 
 #nav-bottom ul li a{
     color:white;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 17px;
     font-family: 'Roboto', sans-serif;
+}
+
+
+main{
+    width: 100%;
+    height: 60%;
+    z-index:3;
+}
+
+#carousel{
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 
 
 img{
     width: 100%;
-    height: 60%;
+    height: 100%;
+   
 }
 
+#carousel span{
+    color: white;
+    font-weight: bolder;
+    font-size: 30px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+section{
+    width: 100%;
+    height: 200%;
+    background-color: black;
+}
+
+section>div{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: first baseline;
+    border: 1px solid black;
+}
+
+section div span{
+    color:white;
+}
+
+.section-group{
+    width: 100%;
+    height: 80%;
+}
+
+.section-group img{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+    width: 100%;
+    height: 10%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+}
+
+footer ul{
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer ul li{
+   margin-right: 35px;
+}
+
+
+.footer-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-image i{
+    font-size: 25px;
+}
+
+.footer-text{
+    color:white;
+    font-size: 10px;
+}
